split collect and send to make transaction shorter